k8s/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myjob
  labels:
    app.kubernetes.io/name: myjob
